<resources>
    <string name="app_name">NottsPark</string>

    <string-array name="acc_type_array">
        <item>Red Parking Permit</item>
        <item>Yellow Parking Permit</item>
    </string-array>

    <string-array name="red_zone_array">
        <item>ZONE B - Near Blue Building</item>
        <item>ZONE P - Near Civil Mixing Lab</item>
        <item>ZONE N1 - Next to Engineering Research Building</item>
        <item>ZONE N2 - Next to Engineering Research Building</item>
        <item>ZONE J1 - Behind Purple Building</item>
        <item>ZONE J2 - Around Nexus/Rawa area</item>
        <item>ZONE C - Outside SA Circle</item>
        <item>ZONE H - Near Yellow Building/SA Bus Stop</item>
        <item>ZONE S - Near Sport Complex</item>
        <item>ZONE T - Between Tioman and Langkawi Hall</item>
        <item>ZONE L - Near Pangkor Hall</item>
        <item>ZONE A - Between Pangkor and Kapas Hall</item>
        <item>ZONE K - Behind Kapas Hall</item>
        <item>ZONE R1 - Next to Redang Hall</item>
        <item>ZONE R2 - Behind Redang Hall</item>
        <item>ZONE M - Near Islamic Centre</item>
    </string-array>

    <string-array name="yellow_zone_array">
        <item>ZONE B1 - Between Trent and Blue Building</item>
        <item>ZONE B2 - Behind Blue Building</item>
        <item>ZONE B3 - Between Blue Building</item>
        <item>ZONE C - Near Red Building</item>
        <item>ZONE D - Near Purple Building</item>
        <item>ZONE D2- Between Purple Building and Civil Mixing Lab</item>
        <item>ZONE E1 - Between Purple and Orange Building</item>
        <item>ZONE E2 - Near Orange and Engineering Research Building</item>
        <item>ZONE N - Near Engineering Research Building</item>
        <item>ZONE F3 - Near F3 Building</item>
        <item>ZONE F4 - Near F4 Building</item>
    </string-array>

    <string-array name="vehicle_brand_array">
        <item>Alfa Romeo</item>
        <item>Aston Martin</item>
        <item>Audi</item>
        <item>Bentley</item>
        <item>BMW</item>
        <item>Bufori</item>
        <item>Caterham</item>
        <item>Chana</item>
        <item>Chery</item>
        <item>Chevrolet</item>
        <item>Citroen</item>
        <item>Ferrari</item>
        <item>Fiat</item>
        <item>Ford</item>
        <item>Haval</item>
        <item>Honda</item>
        <item>Hyundai</item>
        <item>Infiniti</item>
        <item>Isuzu</item>
        <item>Jaguar</item>
        <item>Jeep</item>
        <item>Kia</item>
        <item>Lamborghini</item>
        <item>Land Rover</item>
        <item>Lexus</item>
        <item>Lotus</item>
        <item>Mahindra</item>
        <item>Maserati</item>
        <item>Maxus</item>
        <item>Mazda</item>
        <item>McLaren</item>
        <item>Mercedes-Benz</item>
        <item>MINI</item>
        <item>Mitsubishi</item>
        <item>Nissan</item>
        <item>Perodua</item>
        <item>Peugeot</item>
        <item>Porsche</item>
        <item>Proton</item>
        <item>Renault</item>
        <item>Rolls-Royce</item>
        <item>Skoda</item>
        <item>SsangYong</item>
        <item>Subaru</item>
        <item>Suzuki</item>
        <item>Tata</item>
        <item>Toyota</item>
        <item>Volkswagen</item>
        <item>Volvo</item>
        <item>Other</item>
    </string-array>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="password_reconfirm">Type the password again</string>
    <string name="dialog_log_out">Logged out from NottsPark</string>
    <string name="okay">OK</string>

</resources>
